--- a/.github/workflows/GL-iNet.yml
+++ b/.github/workflows/GL-iNet.yml
@@ -67,7 +67,7 @@ jobs:
         sed -i 's/192.168.1.1/192.168.8.1/' package/base-files/files/bin/config_generate
         sed -i 's/OpenWrt/AXT1800/' package/base-files/files/bin/config_generate
         #sed -i 's/UTC/CST-8/' package/base-files/files/bin/config_generate
-        ./scripts/gen_config.py target_wlan_ap-gl-axt1800-5-4 luci openwrt_common
+        ./scripts/gen_config.py target_wlan_ap-gl-axt1800-5-4 luci openwrt_common glinet_common glinet_axt1800
         #sed -i '/set wireless.radio${devidx}.disabled/d' package/kernel/mac80211/files/lib/wifi/mac80211.sh   ##默认开启WIFI
         #sed -i 's/luci-theme-bootstrap/luci-theme-argon/' feeds/luci/collections/luci/Makefile  ##更换默认主题
         #rm -rf feeds/liuran001_packages/luci-theme-argon
