--- a/.github/workflows/GL-iNet.yml
+++ b/.github/workflows/GL-iNet.yml
@@ -47,7 +47,7 @@ jobs:
         df -hT $PWD
         git clone $REPO_URL -b $REPO_BRANCH
         cd gl-infra-builder
-        #svn co https://github.com/kiddin9/openwrt-packages/trunk/luci-app-accesscontrol feeds/glinet/luci-app-accesscontrol
+        svn co https://github.com/kiddin9/openwrt-packages/trunk/luci-app-accesscontrol feeds/glinet/luci-app-accesscontrol
         svn co https://github.com/Lienol/openwrt-package/trunk/luci-app-ramfree feeds/glinet/luci-app-ramfree
         svn co https://github.com/kiddin9/openwrt-packages/trunk/luci-app-zerotier feeds/glinet/luci-app-zerotier
         svn co https://github.com/coolsnowwolf/packages/trunk/net/zerotier feeds/glinet/zerotier
@@ -70,7 +70,7 @@ jobs:
         cd package
         git clone https://github.com/jerrykuku/luci-theme-argon.git
         cd ..
-        ./scripts/gen_config.py target_wlan_ap-gl-axt1800-5-4 luci
+        ./scripts/gen_config.py target_wlan_ap-gl-ax1800-5-4 luci
         #sed -i '/set wireless.radio${devidx}.disabled/d' package/kernel/mac80211/files/lib/wifi/mac80211.sh   ##默认开启WIFI
         sed -i 's/luci-theme-bootstrap/luci-theme-argon/' feeds/luci/collections/luci/Makefile  ##更换默认主题
         #rm -rf feeds/liuran001_packages/luci-theme-argon
