--- a/.github/workflows/GL-iNet.yml
+++ b/.github/workflows/GL-iNet.yml
@@ -65,7 +65,7 @@ jobs:
         sed -i '/DISTRIB_DESCRIPTION/d' package/base-files/files/etc/openwrt_release
         echo "DISTRIB_DESCRIPTION='OpenWrt-21.02 R22.6.18 '" >> package/base-files/files/etc/openwrt_release
         sed -i 's/192.168.1.1/192.168.8.1/' package/base-files/files/bin/config_generate
-        sed -i 's/OpenWrt/AXT1800/' package/base-files/files/bin/config_generate
+        sed -i 's/OpenWrt/AX1800/' package/base-files/files/bin/config_generate
         #sed -i 's/UTC/CST-8/' package/base-files/files/bin/config_generate
         cd package
         git clone https://github.com/jerrykuku/luci-theme-argon.git
