--- a/.github/workflows/GL-iNet.yml
+++ b/.github/workflows/GL-iNet.yml
@@ -5,6 +5,9 @@ on:
     types: started
   repository_dispatch:
   workflow_dispatch:
+    # - cron: '*/5 * * * *'
+    # 表达式生成  https://crontab.guru/
+    - cron: '2 */12  1 * *'
     inputs:
       ssh:
         description: 'SSH connection to Actions'
@@ -22,7 +25,7 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     if: github.event.repository.owner.id == github.event.sender.id
 
     steps:
