--- a/.github/workflows/GL-iNet.yml
+++ b/.github/workflows/GL-iNet.yml
@@ -53,9 +53,9 @@ jobs:
         svn co https://github.com/coolsnowwolf/packages/trunk/multimedia/aliyundrive-fuse feeds/glinet/aliyundrive-fuse
         python3 setup.py -c configs/config-wlan-ap-5.4.yml
         cd wlan-ap/openwrt
-        #wget -q -O - https://github.com/upx/upx/releases/download/v4.0.1/upx-4.0.1-amd64_linux.tar.xz | tar -Jx --strip 1 -f - -C tools/upx
+        wget -q -O - https://github.com/upx/upx/releases/download/v4.0.1/upx-4.0.1-amd64_linux.tar.xz | tar -Jx --strip 1 -f - -C tools/upx
         svn checkout https://github.com/coolsnowwolf/openwrt/tree/lede-17.01/trunk/tools/ucl tools/ucl
-        svn checkout https://github.com/coolsnowwolf/openwrt/tree/lede-17.01/trunk/tools/upx tools/upx
+        #svn checkout https://github.com/coolsnowwolf/openwrt/tree/lede-17.01/trunk/tools/upx tools/upx
         sed -i '/tools-y += patchelf pkgconf quilt squashfskit4 sstrip zip zlib zstd/a tools-y += ucl upx' tools/Makefile
         sed -i '/$(curdir)\/bison\/compile := $(curdir)\/flex\/compile/a $(curdir)\/upx\/compile := $(curdir)\/ucl\/compile' tools/Makefile        
         #sed -i '$a src-git liuran001_packages https://github.com/liuran001/openwrt-packages' feeds.conf.default ##添加liuran001源
